<resources>
    <string name="app_name">TFEB</string>
    <string name="person_first_name">Name</string>
    <string name="person_second_name">Second Name</string>
    <string name="balance">BALANCE</string>
    <string name="check">Check</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="card_number_hint">Card number</string>
    <string name="card_person_name_hint">First name</string>
    <string name="card_person_surname_hint">Second name</string>
    <string name="error_input_card_number">Invalid Card Number</string>
    <string name="error_input_card_person_name">Invalid Name</string>
    <string name="error_input_card_person_surname">Invalid Surname</string>
    <string name="your_balance_here">Your balance here:</string>
    <string name="hello">Hi</string>
    <string name="card_information">Card information:</string>
    <string name="choose_language">Choose language:</string>
    <string name="settings">Settings:</string>


</resources>